--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^20.2.1",
     "dotenv": "^16.0.3",
     "node": "^20.1.0",
     "openai": "^3.2.1",
