--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "outDir": "build",
+    "outDir": "dist",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
