--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^20.2.1",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "node": "^20.1.0",
     "openai": "^3.2.1",
