(sls) reconfig files to run with responsiveVoice API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "outDir": "dist",
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/server/api/responsiveVoiceAPI.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
