--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/node": "^20.2.1",
     "axios": "^1.4.0",
+    "deepspeech": "^0.9.3",
+    "deepspeech-tflite": "^0.9.3",
     "dotenv": "^16.0.3",
     "node": "^20.1.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
