--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "chatbot",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
+
   "scripts": {
-    "dev:ui": "vite",
+    "dev:ui": "npm run dev --workspace=app-ui",
     "dev:server": "ts-node /src/server/index.ts",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^20.2.1",
     "axios": "^1.4.0",
     "deepspeech": "^0.9.3",
     "deepspeech-tflite": "^0.9.3",
@@ -22,11 +21,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -37,7 +36,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+    "typescript": "^5.0.2"
+  },
+  "workspaces": [
+    "workspaces/ui"
+  ]
 }
