--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "chatbot",
+  "name": "Chatty Chatty",
+  "description": "Root package.json",
   "private": true,
   "version": "1.0.0",
 
   "scripts": {
     "dev:ui": "npm run dev --workspace=app-ui",
-    "dev:server": "ts-node /src/server/index.ts",
+    "dev:server": "npm run dev --workspace=app-server",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "deepspeech": "^0.9.3",
-    "deepspeech-tflite": "^0.9.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node": "^20.1.0",
-    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "ts-node": "^10.9.1"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -39,6 +32,7 @@
     "typescript": "^5.0.2"
   },
   "workspaces": [
-    "workspaces/ui"
+    "workspaces/ui",
+    "workspaces/server"
   ]
 }
