--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7"
   }
 }
