--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "Chatty Chatty",
-  "description": "Root package.json",
+  "name": "app-client",
   "private": true,
-  "version": "1.0.0",
-
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "dev:ui": "npm run dev --workspace=app-ui",
-    "dev:server": "npm run dev --workspace=app-server",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "typescript": "^5.0.2"
-  },
-  "workspaces": [
-    "workspaces/ui",
-    "workspaces/server"
-  ]
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9"
+  }
 }
