--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "description": "Client code for app",
   "author": "David & Jason",
   "license": "ISC",
-
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
