--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "main": "index.ts",
   "scripts": {
-    "dev": "tsx src/",
+    "dev": "tsx watch src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
