--- a/serverless/package.json
+++ b/serverless/package.json
@@ -4,7 +4,6 @@
   "description": "Server code for app",
   "author": "David & Jason",
   "license": "ISC",
-  "main": "index.ts",
   "scripts": {
     "dev": "tsx watch src/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +15,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
     "axios": "^1.4.0",
     "deepspeech": "^0.9.3",
     "deepspeech-tflite": "^0.9.3",
