--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
+    "dev:netlify":"netlify dev",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "netlify-cli": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
