--- a/serverless/package.json
+++ b/serverless/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
     "axios": "^1.4.0",
     "deepspeech": "^0.9.3",
     "deepspeech-tflite": "^0.9.3",
