--- a/serverless/package.json
+++ b/serverless/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "@netlify/functions": "^1.6.0",
+    "@trpc/server": "^10.29.1",
     "axios": "^1.4.0",
     "deepspeech": "^0.9.3",
     "deepspeech-tflite": "^0.9.3",
     "dotenv": "^16.1.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "trpc-netlify-functions": "^0.4.0"
   }
 }
