--- a/serverless/package.json
+++ b/serverless/package.json
@@ -22,6 +22,7 @@
     "deepspeech-tflite": "^0.9.3",
     "dotenv": "^16.1.3",
     "openai": "^3.2.1",
-    "trpc-netlify-functions": "^0.4.0"
+    "trpc-netlify-functions": "^0.4.0",
+    "zod": "^3.21.4"
   }
 }
