--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 functions = "../serverless"
-build = "npm run build"
+build = "npm run prebuild && npm run build"
 publish = "dist"
 
 [dev]
