(be) fix redirect

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,8 +1,14 @@
 [build]
-functions = "../serverless"
 build = "npm run prebuild && npm run build"
 publish = "dist"
 
+[[redirects]]
+from = "/"
+to = "/index.html"
+status = 200
+
+[functions]
+directory = "../serverless"
+
 [dev]
-functions = "../serverless"
 autoLaunch = true
