(be) fix redirects

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -3,7 +3,7 @@ build = "npm run prebuild && npm run build"
 publish = "dist"
 
 [[redirects]]
-from = "/"
+from = "/*"
 to = "/index.html"
 status = 200
 
