--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev:netlify": "netlify dev",
     "dev": "vite",
-    "prebuild":"cd ../serverless && npm i",
+    "prebuild": "cd ../serverless && npm i",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -26,6 +26,7 @@
     "netlify-cli": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-error-boundary": "^4.0.9",
     "react-router-dom": "^6.11.2"
   },
