(sys) update package json scripts

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "dev": "vite",
     "prebuild": "cd ../serverless && npm i",
     "build": "tsc && vite build",
+    "build:netlify":"netlify build",
+    "deploy:dev":"netlify deploy --alias=dev",
+    "deploy:prod":"netlify deploy --prod",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
