--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "dev": "vite",
     "prebuild": "cd ../serverless && npm i",
     "build": "tsc && vite build",
-    "build:netlify":"netlify build",
-    "deploy:dev":"netlify deploy --alias=dev",
-    "deploy:prod":"netlify deploy --prod",
+    "build:netlify": "netlify build",
+    "deploy:dev": "netlify deploy --alias=dev",
+    "deploy:prod": "netlify deploy --prod",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -44,6 +44,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
