--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-error-boundary": "^4.0.9",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "tailwind-merge": "^1.13.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
