--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react-dropdown": "^1.11.0",
     "react-error-boundary": "^4.0.9",
     "react-router-dom": "^6.11.2",
-    "tailwind-merge": "^1.13.1"
+    "tailwind-merge": "^1.13.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
