--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-error-boundary": "^4.0.9",
     "react-router-dom": "^6.11.2",
     "tailwind-merge": "^1.13.1",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
